--- a/index.html
+++ b/index.html
@@ -21,7 +21,27 @@
   
       <p id="message"></p>
     </div>
+    
+    <div class="card hidden" id="areYouSurePage">
+      <h1>Will you be my Valentine? 💘</h1>
   
+      <img src="are_you_sure.gif" class="gif" alt="Are You Sure GIF">
+  
+      <div class="buttons">
+        <button id="yesv1Btn">Yes 💖</button>
+        <button id="noBtn">No 🙈</button>
+      </div>
+  
+      <p id="message"></p>
+    </div>
+
+    
+    <div class="card hidden" id="successPage">
+      <h1>I love you Maxine Kaye💘</h1>
+      <img src="dancing_bear.gif" class="gif" alt="Success GIF">
+      <p id="message">Thank you for accepting it beautiful 💖</p>
+    </div>
+
     <!-- PAGE 2 (hidden by default) -->
     <div class="card hidden" id="sadPage">
       <h1>Are you sure?</h1>
